src/objects/Work_Order_MKT__c.object
<CustomObject>
    <description>Objeto temporal creado para permitir la sincronización con MARKETING CLOUD del objeto WorkOrder.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Representa el Nombre del Cliente</description>
        <formula>OTR_LKP_OrdenTrabajo__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre del Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Representa la Dirección dónde se van a realizar los Trabajos</description>
        <formula>OTR_LKP_OrdenTrabajo__r.Street &amp; &apos;, &apos; &amp; OTR_LKP_OrdenTrabajo__r.PostalCode &amp; &apos;, &apos; &amp; OTR_LKP_OrdenTrabajo__r.City &amp; &apos;, &apos; &amp; OTR_LKP_OrdenTrabajo__r.State</formula>
        <label>Dirección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArrivalWindowEndTime__c</fullName>
        <description>Representa la Fecha y Hora de Finalización del plazo de llegada fijado en la Primera Cita de Servicio de una Orden de Trabajo</description>
        <formula>OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowEndTime</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hora Fin Primera Cita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ArrivalWindowStartTime__c</fullName>
        <description>Representa la Fecha y Hora de Inicio del plazo de llegada fijado en la Primera Cita de Servicio de una Orden de Trabajo</description>
        <formula>OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hora Inicio Primera Cita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asignacion_Directa__c</fullName>
        <description>Representa si el Recurso de Servicio vinculada a la Primera Cita de Servicio de una Orden de Trabajo tiene Asignación Directa o No.</description>
        <formula>OTR_LKP_OrdenTrabajo__r.OTR_LKP_Recurso_Servicio__r.RSE_CAS_Asignacion_Directa__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asignación Directa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black_Window__c</fullName>
        <description>Este campo irá a TRUE cuando la Work Order sea creada en fin de semana. En caso contrario irá a FALSE.</description>
        <formula>IF((CASE(MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)=&quot;Sunday&quot; || CASE(MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)=&quot;Saturday&quot;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Black Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <description>Representa el número de teléfono del cliente.</description>
        <formula>OTR_LKP_OrdenTrabajo__r.Case.CAS_TFN_Solicitud_Telefono__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>OTR_MKT_LKP_Contacto__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_Cita__c</fullName>
        <description>Representa el estado de la Primera Cita de Servicio de una Orden de Trabajo</description>
        <formula>TEXT(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado Cita</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <defaultValue>&quot;ES&quot;</defaultValue>
        <label>Locale</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileConnect_Status__c</fullName>
        <defaultValue>&quot;Active&quot;</defaultValue>
        <label>MobileConnect Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileNumber__c</fullName>
        <description>Número de Teléfono al que se envía el SMS.
Este número de teléfono pertenece al contacto principal de la cuenta del profesional asignado a la Orden de Trabajo</description>
        <formula>&apos;34&apos;&amp;OTR_MKT_LKP_Contacto__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_CAS_Urgente__c</fullName>
        <description>Representa si la Orden de Trabajo es urgente</description>
        <formula>OTR_LKP_OrdenTrabajo__r.OTR_CAS_Urgente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servicio Urgente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_ArrivalWindowEndTime__c</fullName>
        <formula>IF((ISNULL(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime)||ISBLANK(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime)),&quot;&quot;, LPAD(TEXT(HOUR(TIMEVALUE(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime))), 2, &apos;0&apos;) &amp; &quot;:&quot; &amp; 
LPAD(TEXT(MINUTE(TIMEVALUE(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime))), 2, &apos;0&apos;) &amp; &quot;-&quot; &amp; 
LPAD(TEXT(HOUR(TIMEVALUE(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowEndTime))), 2, &apos;0&apos;) &amp; &quot;:&quot; &amp; 
LPAD(TEXT(MINUTE(TIMEVALUE(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowEndTime))), 2, &apos;0&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intervalo Hora Primera Cita</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_ArrivalWindowStartTime__c</fullName>
        <formula>IF((ISNULL(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime)||ISBLANK(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime)),&quot;&quot;,LPAD(TEXT(DAY(DATEVALUE(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime))), 2, &apos;0&apos;) &amp; &quot;/&quot; &amp; 
LPAD(TEXT(MONTH(DATEVALUE(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime))), 2, &apos;0&apos;) &amp; &quot;/&quot; &amp; 
RIGHT(TEXT(YEAR(DATEVALUE(OTR_LKP_OrdenTrabajo__r.OTR_LKP_Primera_Cita__r.ArrivalWindowStartTime))), 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha Primera Cita</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Gremio__c</fullName>
        <description>Representa el Gremio requerido en la Orden de Trabajo</description>
        <formula>CASE(TEXT( OTR_LKP_OrdenTrabajo__r.OTR_SEL_Gremio__c), 
&apos;21&apos;,&apos;AIRE ACONDICIONADO&apos;,&apos;31&apos;,&apos;ALARMAS&apos;,&apos;2&apos;,&apos;ALBAÑIL&apos;,&apos;37&apos;,&apos;AMBULANCIAS&apos;,&apos;16&apos;,&apos;ANTENISTA&apos;,&apos;41&apos;,&apos;ANULACIÓN TARJETAS&apos;,&apos;42&apos;,&apos;AUTOMÁTICOS CASER&apos;,&apos;24&apos;,&apos;BARNIZADOR&apos;,&apos;19&apos;,&apos;CALEFACCIÓN&apos;,&apos;10&apos;,&apos;CARPINTERO MADERA&apos;,&apos;11&apos;,&apos;CARPINTERO METÁLICO&apos;,&apos;7&apos;,&apos;CERRAJERO&apos;,&apos;6&apos;,&apos;CRISTALERO&apos;,&apos;5&apos;,&apos;ELECTRICISTA&apos;,&apos;23&apos;,&apos;ENMOQUETADOR&apos;,&apos;4&apos;,&apos;ESCAYOLA&apos;,&apos;28&apos;,&apos;FACHADAS&apos;,&apos;1&apos;,&apos;FONTANERO&apos;,&apos;49&apos;,&apos;FRIGORISTA&apos;,&apos;20&apos;,&apos;FRÍO INDUSTRIAL&apos;,&apos;57&apos;,&apos;FUMIGACIÓN&apos;,&apos;18&apos;,&apos;GAS&apos;,&apos;70&apos;,&apos;GRANDES SINIESTROS&apos;,&apos;38&apos;,&apos;HOTEL&apos;,&apos;13&apos;,&apos;IMPERMEABILIZACIONES&apos;,&apos;33&apos;,&apos;INSPECCIÓN DE SERVICIOS&apos;,&apos;75&apos;,&apos;INSTALACIONES AIRE ACONDICIONADO&apos;,&apos;56&apos;,&apos;JARDINERÍA&apos;,&apos;40&apos;,&apos;LAVANDERÍA&apos;,&apos;25&apos;,&apos;LIMPIEZAS&apos;,&apos;58&apos;,&apos;LOZAS&apos;,&apos;44&apos;,&apos;MANITAS&apos;,&apos;51&apos;,&apos;MANITAS ELÉCTRICO&apos;,&apos;52&apos;,&apos;MANITAS FONTANERO&apos;,&apos;55&apos;,&apos;MANITAS GAMA BLANCA&apos;,&apos;54&apos;,&apos;MANTENIMIENTO AIRE ACONDICIONADO&apos;,&apos;62&apos;,&apos;MANTENIMIENTO CERRAJERO&apos;,&apos;59&apos;,&apos;MANTENIMIENTO FONTANERO&apos;,&apos;60&apos;,&apos;MANTENIMIENTO PERSIANISTA&apos;,&apos;14&apos;,&apos;MARMOLISTA&apos;,&apos;64&apos;,&apos;OTROS (AEGON)&apos;,&apos;8&apos;,&apos;PARQUETISTA&apos;,&apos;9&apos;,&apos;PERSIANISTA&apos;,&apos;48&apos;,&apos;PERSIANISTA INDUSTRIAL&apos;,&apos;35&apos;,&apos;PERSONAL DE SEGURIDAD&apos;,&apos;3&apos;,&apos;PINTOR&apos;,&apos;29&apos;,&apos;PLADUR&apos;,&apos;26&apos;,&apos;POCERO CAMIÓN CUBA&apos;,&apos;17&apos;,&apos;PORTEROS AUTOMÁTICOS&apos;,&apos;63&apos;,&apos;PRESUPUESTOS ASISTENCIA&apos;,&apos;34&apos;,&apos;REFORMAS&apos;,&apos;74&apos;,&apos;REFORMAS FONTANERIA&apos;,&apos;43&apos;,&apos;REPARACIONES DE ORDENADORES&apos;,&apos;47&apos;,&apos;REPARADOR APARATOS MAQUINARIA INDUSTRIAL&apos;,&apos;50&apos;,&apos;REPARADOR CAJAS CAUDAL&apos;,&apos;45&apos;,&apos;REPASOS PROMOCIONES&apos;,&apos;39&apos;,&apos;RESTAURANTE&apos;,&apos;46&apos;,&apos;ROTULISTA Y LUMINISTA&apos;,&apos;36&apos;,&apos;SUMINISTRADOR&apos;,&apos;22&apos;,&apos;TAPICERO&apos;,&apos;12&apos;,&apos;TÉCNICO GAMA BLANCA&apos;,&apos;15&apos;,&apos;TÉCNICO GAMA MARRÓN&apos;,&apos;27&apos;,&apos;TEJADOS&apos;,&apos;53&apos;,&apos;TOLDOS&apos;,&apos;30&apos;,&apos;VOZ Y DATOS&apos;,&apos;76&apos;,&apos;INSTALACIÓN DE CALDERAS&apos;,&apos;77&apos;,&apos;MULTIMANITAS&apos;,TEXT( OTR_LKP_OrdenTrabajo__r.OTR_SEL_Gremio__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gremio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_FOR_Nombre_Cuenta_Prof__c</fullName>
        <formula>OTR_MKT_LKP_Profesional__r.RSE_LKP_Cuenta__r.Name</formula>
        <label>Cuenta Profesional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_LKP_OrdenTrabajo__c</fullName>
        <description>Representa el lookup a la WorkOrder original</description>
        <label>Orden de trabajo</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Servicios (MKT)</relationshipLabel>
        <relationshipName>Servicios_MKT</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OTR_LKP_Tipo_Intervencion__c</fullName>
        <description>Representa el tipo de Caso al que pertenece la Orden de Trabajo</description>
        <formula>OTR_LKP_OrdenTrabajo__r.Case.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Intervención</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_MKT_LKP_Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Representa el lookup al contacto principal de la cuenta del profesional asignado a la Orden de Trabajo</description>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Servicios (MKT)</relationshipLabel>
        <relationshipName>Servicios_MKT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_MKT_LKP_Profesional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profesional</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Servicios (MKT)</relationshipLabel>
        <relationshipName>Servicios_MKT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Gremio__c</fullName>
        <label>Nombre Gremio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Num_OrdenTrabajo_HS__c</fullName>
        <description>Representa el Número de Servicio de la Orden de Trabajo</description>
        <formula>OTR_LKP_OrdenTrabajo__r.OTR_TXT_Num_OrdenTrabajo_HS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nº de Servicio HS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_TXT_Tipo_Red__c</fullName>
        <label>Tipo de Servicio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Codigo_Recurso__c</fullName>
        <description>Representa el Código de Recurso de Servicio asignado a la Primera Cita de Servicio de una Orden de Trabajo</description>
        <formula>OTR_MKT_LKP_Profesional__r.RSE_TXT_Codigo_Recurso__c</formula>
        <label>Código de Profesional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Enviado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Enviado</label>
        <type>Checkbox</type>
    </fields>
    <label>Servicio (MKT)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OTR_MKT_LKP_Contacto__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Identificador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicios (MKT)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>